<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/baseline_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_dang_xuat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_tag_func"
        android:text="Đăng xuất"
        android:textColor="@color/white"
        android:layout_marginStart="212dp"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toTopOf="@+id/img_avatar" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/user"
        app:layout_constraintStart_toStartOf="@id/img_avatar"
        app:layout_constraintTop_toBottomOf="@id/img_avatar" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Bao_cao_va_thong_ke"
        app:layout_constraintStart_toStartOf="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <RelativeLayout
        android:id="@+id/linear_box_thongKe"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:background="@drawable/box_custom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.034">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="102dp"
            android:text="@string/tong_so_nhan_vien" />

        <TextView
            android:id="@+id/sum_nhan_vien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="102dp"
            android:text="0" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_marginStart="20dp"
        android:background="@drawable/box_custom"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/linear_box_thongKe"
        app:layout_constraintTop_toTopOf="@+id/linear_box_thongKe">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/txt_sum_nghi_phep"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-31dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="31dp"
            android:text="@string/tong_ngay_nghi_phep" />

        <TextView
            android:id="@+id/txt_sum_nghi_phep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="102dp"
            android:text="0" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_marginStart="0dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/box_custom"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/linear_box_thongKe"
        app:layout_constraintTop_toBottomOf="@+id/linear_box_thongKe">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="102dp"
            android:text="@string/tong_so_cong" />
        <TextView
            android:id="@+id/txt_sum_cong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="102dp"
            android:text="0" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayout3"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:background="@drawable/box_custom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/sum_luong"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-32dp"
            android:text="@string/tong_so_luong" />

        <TextView
            android:id="@+id/sum_luong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="102dp"
            android:text="0" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/func"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


    <Button
        android:id="@+id/btn_quan_ly_phong_ban"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_tag_func"
        android:text="@string/quan_ly_phong_ban"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/quan_ly_cham_cong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_tag_func"
        android:text="@string/quan_ly_cham_cong"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/btn_quan_ly_phong_ban"
        app:layout_constraintTop_toBottomOf="@+id/btn_quan_ly_phong_ban" />

    <Button
        android:id="@+id/quan_ly_nghi_phep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/btn_tag_func"
        android:text="@string/quan_ly_ghi_phep"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/btn_quan_ly_phong_ban"
        app:layout_constraintTop_toTopOf="@+id/btn_quan_ly_phong_ban" />

    <Button
        android:id="@+id/quan_ly_luong_thuong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/btn_tag_func"
        android:text="@string/quan_ly_luong_thuong"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/quan_ly_cham_cong"
        app:layout_constraintTop_toTopOf="@+id/quan_ly_cham_cong" />


</androidx.constraintlayout.widget.ConstraintLayout>
