<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeUseFragment">

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/baseline_person"
        android:layout_alignParentTop="true"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_avatar"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"

        android:text="@string/user"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_below="@id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginStart="30dp"
        android:text="@string/Bao_cao_va_thong_ke"
        app:layout_constraintStart_toStartOf="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />


    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_below="@id/textView15"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/box_custom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.347">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/tong_so_cong" />

        <TextView
            android:id="@+id/txt_sum_cong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="102dp"
            android:text="0" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayout3"
        android:layout_alignBottom="@id/linearLayout2"
        android:layout_toRightOf="@+id/linearLayout2"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="0dp"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:background="@drawable/box_custom"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/txt_sum_luong"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-32dp"
            android:text="@string/tong_so_luong" />

        <TextView
            android:id="@+id/txt_sum_luong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="102dp"
            android:text="0" />
    </RelativeLayout>


    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_dk_phep"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-32dp"
        android:text="@string/func" />

    <Button
        android:id="@+id/btn_dk_phep"
        android:layout_below="@id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/btn_tag_func"
        android:text="@string/dang_ky_nghi_phep"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />



</RelativeLayout>
