<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_home"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserHomeFragment1">

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/baseline_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/user"
        app:layout_constraintStart_toStartOf="@id/img_avatar"
        app:layout_constraintTop_toBottomOf="@id/img_avatar" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Bao_cao_va_thong_ke"
        app:layout_constraintStart_toStartOf="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />


    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_marginBottom="288dp"
        android:background="@drawable/box_custom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.347">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="102dp"
            android:text="@string/tong_so_cong" />

        <TextView
            android:id="@+id/txt_sum_cong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="102dp"
            android:text="0" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayout3"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_marginStart="48dp"
        android:background="@drawable/box_custom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/txt_sum_luong"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-32dp"
            android:text="@string/tong_so_luong" />

        <TextView
            android:id="@+id/txt_sum_luong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="102dp"
            android:text="0" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/func"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


    <Button
        android:id="@+id/btn_history_attendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_tag_func"
        android:text="@string/dang_ky_nghi_phep"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

</androidx.constraintlayout.widget.ConstraintLayout>